@@ -73,6 +73,9 @@ Version 8.33 xx-xxxx-201x
     
 18. Added some #ifdef __VMS code into pcretest.c to help VMS implementations.
 
+19. Redefined some pcre_uchar variables in pcre_exec.c as pcre_uint32; this 
+    gives some modest performance improvement in 8-bit mode.
+
 
 Version 8.32 30-November-2012
 -----------------------------
